# routers/commentsRouter_controllers.go
@@ -7,7 +7,7 @@ import (
 
 func init() {
 
-    beego.GlobalControllerRouter["diary-app/controllers:ObjectController"] = append(beego.GlobalControllerRouter["diary-app/controllers:ObjectController"],
+    beego.GlobalControllerRouter["diary-app/controllers:DiaryController"] = append(beego.GlobalControllerRouter["diary-app/controllers:DiaryController"],
         beego.ControllerComments{
             Method: "Post",
             Router: `/`,
@@ -16,7 +16,7 @@ func init() {
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["diary-app/controllers:ObjectController"] = append(beego.GlobalControllerRouter["diary-app/controllers:ObjectController"],
+    beego.GlobalControllerRouter["diary-app/controllers:DiaryController"] = append(beego.GlobalControllerRouter["diary-app/controllers:DiaryController"],
         beego.ControllerComments{
             Method: "GetAll",
             Router: `/`,
@@ -25,92 +25,29 @@ func init() {
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["diary-app/controllers:ObjectController"] = append(beego.GlobalControllerRouter["diary-app/controllers:ObjectController"],
+    beego.GlobalControllerRouter["diary-app/controllers:DiaryController"] = append(beego.GlobalControllerRouter["diary-app/controllers:DiaryController"],
         beego.ControllerComments{
             Method: "Get",
-            Router: `/:objectId`,
+            Router: `/:id`,
             AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["diary-app/controllers:ObjectController"] = append(beego.GlobalControllerRouter["diary-app/controllers:ObjectController"],
+    beego.GlobalControllerRouter["diary-app/controllers:DiaryController"] = append(beego.GlobalControllerRouter["diary-app/controllers:DiaryController"],
         beego.ControllerComments{
             Method: "Put",
-            Router: `/:objectId`,
+            Router: `/:id`,
             AllowHTTPMethods: []string{"put"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["diary-app/controllers:ObjectController"] = append(beego.GlobalControllerRouter["diary-app/controllers:ObjectController"],
+    beego.GlobalControllerRouter["diary-app/controllers:DiaryController"] = append(beego.GlobalControllerRouter["diary-app/controllers:DiaryController"],
         beego.ControllerComments{
             Method: "Delete",
-            Router: `/:objectId`,
+            Router: `/:id`,
             AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["diary-app/controllers:UserController"] = append(beego.GlobalControllerRouter["diary-app/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Post",
-            Router: `/`,
-            AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["diary-app/controllers:UserController"] = append(beego.GlobalControllerRouter["diary-app/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "GetAll",
-            Router: `/`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["diary-app/controllers:UserController"] = append(beego.GlobalControllerRouter["diary-app/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Get",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["diary-app/controllers:UserController"] = append(beego.GlobalControllerRouter["diary-app/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Put",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["diary-app/controllers:UserController"] = append(beego.GlobalControllerRouter["diary-app/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Delete",
-            Router: `/:uid`,
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["diary-app/controllers:UserController"] = append(beego.GlobalControllerRouter["diary-app/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Login",
-            Router: `/login`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["diary-app/controllers:UserController"] = append(beego.GlobalControllerRouter["diary-app/controllers:UserController"],
-        beego.ControllerComments{
-            Method: "Logout",
-            Router: `/logout`,
-            AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
