# swagger/swagger.yml
@@ -11,132 +11,43 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /object/:
+  /diary/:
     get:
       tags:
-      - object
-      description: get all objects
-      operationId: ObjectController.GetAll
+      - diary
+      description: get all Diaries
+      operationId: DiaryController.GetAll
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
+            $ref: '#/definitions/models.Diary'
     post:
       tags:
-      - object
-      description: create object
-      operationId: ObjectController.Create
+      - diary
+      description: create diary
+      operationId: DiaryController.CreateDiary
       parameters:
       - in: body
         name: body
-        description: The object content
+        description: body for diary content
         required: true
         schema:
-          $ref: '#/definitions/models.Object'
+          $ref: '#/definitions/models.diary'
       responses:
         "200":
-          description: '{string} models.Object.Id'
+          description: '{int} models.Diary.Id'
         "403":
           description: body is empty
-  /object/{objectId}:
+  /diary/{id}:
     get:
       tags:
-      - object
-      description: find object by objectid
-      operationId: ObjectController.Get
+      - diary
+      description: get diary by id
+      operationId: DiaryController.Get
       parameters:
       - in: path
-        name: objectId
-        description: the objectid you want to get
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    put:
-      tags:
-      - object
-      description: update the object
-      operationId: ObjectController.Update
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectid you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: The body
-        required: true
-        schema:
-          $ref: '#/definitions/models.Object'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    delete:
-      tags:
-      - object
-      description: delete the object
-      operationId: ObjectController.Delete
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectId you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: objectId is empty
-  /user/:
-    get:
-      tags:
-      - user
-      description: get all Users
-      operationId: UserController.GetAll
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.User'
-    post:
-      tags:
-      - user
-      description: create users
-      operationId: UserController.CreateUser
-      parameters:
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "200":
-          description: '{int} models.User.Id'
-        "403":
-          description: body is empty
-  /user/{uid}:
-    get:
-      tags:
-      - user
-      description: get user by uid
-      operationId: UserController.Get
-      parameters:
-      - in: path
-        name: uid
+        name: id
         description: The key for staticblock
         required: true
         type: string
@@ -144,17 +55,17 @@ paths:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.Diary'
         "403":
-          description: :uid is empty
+          description: :id is empty
     put:
       tags:
-      - user
-      description: update the user
-      operationId: UserController.Update
+      - diary
+      description: update the diary
+      operationId: DiaryController.Update
       parameters:
       - in: path
-        name: uid
+        name: id
         description: The uid you want to update
         required: true
         type: string
@@ -163,22 +74,22 @@ paths:
         description: body for user content
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/models.Diary'
       responses:
         "200":
           description: ""
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.Diary'
         "403":
-          description: :uid is not int
+          description: :id is not int
     delete:
       tags:
-      - user
-      description: delete the user
-      operationId: UserController.Delete
+      - diary
+      description: delete the diary
+      operationId: DiaryController.Delete
       parameters:
       - in: path
-        name: uid
+        name: id
         description: The uid you want to delete
         required: true
         type: string
@@ -186,79 +97,32 @@ paths:
         "200":
           description: '{string} delete success!'
         "403":
-          description: uid is empty
-  /user/login:
-    get:
-      tags:
-      - user
-      description: Logs user into the system
-      operationId: UserController.Login
-      parameters:
-      - in: query
-        name: username
-        description: The username for login
-        required: true
-        type: string
-      - in: query
-        name: password
-        description: The password for login
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} login success'
-        "403":
-          description: user not exist
-  /user/logout:
-    get:
-      tags:
-      - user
-      description: Logs out current logged in user session
-      operationId: UserController.logout
-      responses:
-        "200":
-          description: '{string} logout success'
+          description: id is empty
 definitions:
-  models.Object:
-    title: Object
+  models.Diary:
+    title: Diary
     type: object
     properties:
-      ObjectId:
-        type: string
-      PlayerName:
-        type: string
-      Score:
+      IsActive:
         type: integer
         format: int64
-  models.Profile:
-    title: Profile
-    type: object
-    properties:
-      Address:
+      Title:
         type: string
-      Age:
+      content:
+        type: string
+      created:
+        type: string
+        format: datetime
+      id:
         type: integer
         format: int64
-      Email:
+      updated:
         type: string
-      Gender:
-        type: string
-  models.User:
-    title: User
+        format: datetime
+  models.diary:
+    title: diary
     type: object
-    properties:
-      Id:
-        type: string
-      Password:
-        type: string
-      Profile:
-        $ref: '#/definitions/models.Profile'
-      Username:
-        type: string
 tags:
-- name: object
+- name: diary
   description: |
-    Operations about object
-- name: user
-  description: |
-    Operations about Users
+    Operations about Diaries
